src/toggl_api.h

#define char_t wchar_t
#define bool_t bool
#define char_t char
#define bool_t int
// Models

    typedef struct {
        uint64_t ID;
        int64_t DurationInSeconds;
        char_t *Description;
        char_t *ProjectAndTaskLabel;
        char_t *TaskLabel;
        char_t *ProjectLabel;
        char_t *ClientLabel;
        uint64_t WID;
        uint64_t PID;
        uint64_t TID;
        char_t *Duration;
        char_t *Color;
        char_t *GUID;
        bool_t Billable;
        // Redmine TimeEntryActivity id (Redmine fork).
        uint64_t ActivityID;
        char_t *Tags;
        uint64_t Started;
        uint64_t Ended;
        char_t *StartTimeString;
        char_t *EndTimeString;
        uint64_t UpdatedAt;
        bool_t DurOnly;
        // In case it's a header
        char_t *DateHeader;
        char_t *DateDuration;
        bool_t IsHeader;
        // Additional fields; only when in time entry editor
        bool_t CanAddProjects;
        bool_t CanSeeBillable;
        uint64_t DefaultWID;
        char_t *WorkspaceName;
        // If syncing a time entry ended with an error,
        // the error is attached to the time entry
        char_t *Error;
        bool_t Locked;
        // Indicates if time entry is not synced to server
        bool_t Unsynced;
        // Group attributes
        bool_t Group;
        bool_t GroupOpen;
        char_t *GroupName;
        char_t *GroupDuration;
        uint64_t GroupItemCount;
        // To categorize to 15-minute batches
        uint64_t RoundedStart;
        uint64_t RoundedEnd;
        // Next in list
        void *Next;
    } TogglTimeEntryView;
    typedef void (*TogglDisplayError)(
        const char_t *errmsg,
        const bool_t user_error);
    typedef void (*TogglDisplayOnlineState)(
        const int64_t state);
    typedef void (*TogglDisplayLogin)(
        const bool_t open,
        const uint64_t user_id);
    typedef void (*TogglDisplayTimeEntryList)(
        const bool_t open,
        TogglTimeEntryView *first,
        const bool_t show_load_more_button);
    typedef void (*TogglDisplayTimerState)(
        TogglTimeEntryView *te);
    // Initialize/destroy an instance of the app

    TOGGL_EXPORT void *toggl_context_init(
        const char_t *app_name,
        const char_t *app_version);
    TOGGL_EXPORT void toggl_context_clear(
        void *context);
    // DB path must be configured from UI

    TOGGL_EXPORT bool_t toggl_set_db_path(
        void *context,
        const char_t *path);
    // Log path must be configured from UI

    TOGGL_EXPORT void toggl_set_log_path(
        const char_t *path);
    TOGGL_EXPORT void toggl_on_error(
        void *context,
        TogglDisplayError cb);
    TOGGL_EXPORT void toggl_on_online_state(
        void *context,
        TogglDisplayOnlineState cb);
    TOGGL_EXPORT void toggl_on_login(
        void *context,
        TogglDisplayLogin cb);
    TOGGL_EXPORT void toggl_on_time_entry_list(
        void *context,
        TogglDisplayTimeEntryList cb);
    TOGGL_EXPORT void toggl_on_timer_state(
        void *context,
        TogglDisplayTimerState cb);
    // After UI callbacks are configured, start pumping UI events

    TOGGL_EXPORT bool_t toggl_ui_start(
        void *context);
    // User interaction with the app

    TOGGL_EXPORT bool_t toggl_login(
        void *context,
        const char_t *email,
        const char_t *password);
    TOGGL_EXPORT bool_t toggl_continue(
        void *context,
        const char_t *guid);
    TOGGL_EXPORT bool_t toggl_stop(
        void *context,
        const bool_t prevent_on_app);
    TOGGL_EXPORT bool_t toggl_logout(
        void *context);