app/lib/src/native/toggl_bindings.dart

// ignore_for_file: non_constant_identifier_names, camel_case_types
// ignore_for_file: library_private_types_in_public_api
//
// Hand-authored FFI bindings for the focused POC subset of `src/toggl_api.h`.
//
// This is intentionally a SMALL, correct subset (context lifecycle, login,
// continue/stop, and the four callbacks the POC needs). The full ~205-function
// surface is generated by `ffigen` (config `app/ffigen.yaml`) into
// `toggl_api_generated.dart`; once that lands it supersedes this file. Keeping a
// hand-written subset lets the FFI layer compile and be reasoned about before
// libclang/ffigen runs in CI. Implements issue FP-20.
//
// ABI notes (see ADR-0001):
//  * `char_t` == `char` (UTF-8) on every target — the core MUST be built without
//    `UNICODE`, so even Windows uses the `char` ABI.
//  * `bool_t` == `int` (NOT C99 `_Bool`); bind it as `Int`/`int`.

import 'dart:ffi' as ffi;
import 'package:ffi/ffi.dart';

/// `TogglTimeEntryView` from `src/toggl_api.h` (lines 47-97).
/// Field order and types MUST match the C struct exactly.
final class TogglTimeEntryView extends ffi.Struct {
  @ffi.Uint64()
  external int ID;

  @ffi.Int64()
  external int DurationInSeconds;

  external ffi.Pointer<Utf8> Description;
  external ffi.Pointer<Utf8> ProjectAndTaskLabel;
  external ffi.Pointer<Utf8> TaskLabel;
  external ffi.Pointer<Utf8> ProjectLabel;
  external ffi.Pointer<Utf8> ClientLabel;

  @ffi.Uint64()
  external int WID;
  @ffi.Uint64()
  external int PID;
  @ffi.Uint64()
  external int TID;

  external ffi.Pointer<Utf8> Duration;
  external ffi.Pointer<Utf8> Color;
  external ffi.Pointer<Utf8> GUID;

  @ffi.Int()
  external int Billable; // bool_t

  @ffi.Uint64()
  external int ActivityID; // Redmine activity id

  external ffi.Pointer<Utf8> Tags;

  @ffi.Uint64()
  external int Started;
  @ffi.Uint64()
  external int Ended;

  external ffi.Pointer<Utf8> StartTimeString;
  external ffi.Pointer<Utf8> EndTimeString;

  @ffi.Uint64()
  external int UpdatedAt;

  @ffi.Int()
  external int DurOnly;

  external ffi.Pointer<Utf8> DateHeader;
  external ffi.Pointer<Utf8> DateDuration;

  @ffi.Int()
  external int IsHeader;

  @ffi.Int()
  external int CanAddProjects;
  @ffi.Int()
  external int CanSeeBillable;

  @ffi.Uint64()
  external int DefaultWID;

  external ffi.Pointer<Utf8> WorkspaceName;
  external ffi.Pointer<Utf8> Error;

  @ffi.Int()
  external int Locked;
  @ffi.Int()
  external int Unsynced;

  @ffi.Int()
  external int Group;
  @ffi.Int()
  external int GroupOpen;

  external ffi.Pointer<Utf8> GroupName;
  external ffi.Pointer<Utf8> GroupDuration;

  @ffi.Uint64()
  external int GroupItemCount;
  @ffi.Uint64()
  external int RoundedStart;
  @ffi.Uint64()
  external int RoundedEnd;

  /// `void *Next` — next node in the linked list (null-terminated).
  external ffi.Pointer<TogglTimeEntryView> Next;
}

// --- Callback native function signatures (the `TogglDisplay*` typedefs) ---

/// `TogglDisplayTimeEntryList(bool_t open, TogglTimeEntryView* first, bool_t showLoadMore)`
typedef DisplayTimeEntryListNative = ffi.Void Function(
    ffi.Int open, ffi.Pointer<TogglTimeEntryView> first, ffi.Int showLoadMore);

/// `TogglDisplayTimerState(TogglTimeEntryView* te)` — `te` is null when stopped.
typedef DisplayTimerStateNative = ffi.Void Function(
    ffi.Pointer<TogglTimeEntryView> te);

/// `TogglDisplayLogin(bool_t open, uint64_t user_id)`
typedef DisplayLoginNative = ffi.Void Function(ffi.Int open, ffi.Uint64 userId);

/// `TogglDisplayError(const char_t* errmsg, bool_t user_error)`
typedef DisplayErrorNative = ffi.Void Function(
    ffi.Pointer<Utf8> errmsg, ffi.Int userError);

/// `TogglDisplayOnlineState(int64_t state)`
typedef DisplayOnlineStateNative = ffi.Void Function(ffi.Int64 state);

// --- Exported functions (subset) ---

typedef _ContextInitNative = ffi.Pointer<ffi.Void> Function(
    ffi.Pointer<Utf8> appName, ffi.Pointer<Utf8> appVersion);
typedef _ContextInitDart = ffi.Pointer<ffi.Void> Function(
    ffi.Pointer<Utf8> appName, ffi.Pointer<Utf8> appVersion);

typedef _ContextClearNative = ffi.Void Function(ffi.Pointer<ffi.Void> ctx);
typedef _ContextClearDart = void Function(ffi.Pointer<ffi.Void> ctx);

typedef _SetDbPathNative = ffi.Int Function(
    ffi.Pointer<ffi.Void> ctx, ffi.Pointer<Utf8> path);
typedef _SetDbPathDart = int Function(
    ffi.Pointer<ffi.Void> ctx, ffi.Pointer<Utf8> path);

typedef _SetLogPathNative = ffi.Void Function(ffi.Pointer<Utf8> path);
typedef _SetLogPathDart = void Function(ffi.Pointer<Utf8> path);

typedef _UiStartNative = ffi.Int Function(ffi.Pointer<ffi.Void> ctx);
typedef _UiStartDart = int Function(ffi.Pointer<ffi.Void> ctx);

typedef _LoginNative = ffi.Int Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<Utf8> email, ffi.Pointer<Utf8> password);
typedef _LoginDart = int Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<Utf8> email, ffi.Pointer<Utf8> password);

typedef _LogoutNative = ffi.Int Function(ffi.Pointer<ffi.Void> ctx);
typedef _LogoutDart = int Function(ffi.Pointer<ffi.Void> ctx);

typedef _ContinueNative = ffi.Int Function(
    ffi.Pointer<ffi.Void> ctx, ffi.Pointer<Utf8> guid);
typedef _ContinueDart = int Function(
    ffi.Pointer<ffi.Void> ctx, ffi.Pointer<Utf8> guid);

typedef _StopNative = ffi.Int Function(
    ffi.Pointer<ffi.Void> ctx, ffi.Int preventOnApp);
typedef _StopDart = int Function(ffi.Pointer<ffi.Void> ctx, int preventOnApp);

// Callback registrations: `void toggl_on_X(void* ctx, Cb cb)`
typedef _OnTimeEntryListNative = ffi.Void Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.NativeFunction<DisplayTimeEntryListNative>> cb);
typedef _OnTimeEntryListDart = void Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.NativeFunction<DisplayTimeEntryListNative>> cb);

typedef _OnTimerStateNative = ffi.Void Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.NativeFunction<DisplayTimerStateNative>> cb);
typedef _OnTimerStateDart = void Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.NativeFunction<DisplayTimerStateNative>> cb);

typedef _OnLoginNative = ffi.Void Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.NativeFunction<DisplayLoginNative>> cb);
typedef _OnLoginDart = void Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.NativeFunction<DisplayLoginNative>> cb);

typedef _OnErrorNative = ffi.Void Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.NativeFunction<DisplayErrorNative>> cb);
typedef _OnErrorDart = void Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.NativeFunction<DisplayErrorNative>> cb);

typedef _OnOnlineStateNative = ffi.Void Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.NativeFunction<DisplayOnlineStateNative>> cb);
typedef _OnOnlineStateDart = void Function(ffi.Pointer<ffi.Void> ctx,
    ffi.Pointer<ffi.NativeFunction<DisplayOnlineStateNative>> cb);

/// Thin typed wrapper over the looked-up symbols of `libTogglDesktopLibrary`.
class TogglBindings {
  TogglBindings(ffi.DynamicLibrary lib)
      : contextInit =
            lib.lookupFunction<_ContextInitNative, _ContextInitDart>(
                'toggl_context_init'),
        contextClear =
            lib.lookupFunction<_ContextClearNative, _ContextClearDart>(
                'toggl_context_clear'),
        setDbPath = lib.lookupFunction<_SetDbPathNative, _SetDbPathDart>(
            'toggl_set_db_path'),
        setLogPath = lib.lookupFunction<_SetLogPathNative, _SetLogPathDart>(
            'toggl_set_log_path'),
        uiStart =
            lib.lookupFunction<_UiStartNative, _UiStartDart>('toggl_ui_start'),
        login = lib.lookupFunction<_LoginNative, _LoginDart>('toggl_login'),
        logout = lib.lookupFunction<_LogoutNative, _LogoutDart>('toggl_logout'),
        continueEntry =
            lib.lookupFunction<_ContinueNative, _ContinueDart>('toggl_continue'),
        stop = lib.lookupFunction<_StopNative, _StopDart>('toggl_stop'),
        onTimeEntryList =
            lib.lookupFunction<_OnTimeEntryListNative, _OnTimeEntryListDart>(
                'toggl_on_time_entry_list'),
        onTimerState =
            lib.lookupFunction<_OnTimerStateNative, _OnTimerStateDart>(
                'toggl_on_timer_state'),
        onLogin = lib.lookupFunction<_OnLoginNative, _OnLoginDart>(
            'toggl_on_login'),
        onError = lib.lookupFunction<_OnErrorNative, _OnErrorDart>(
            'toggl_on_error'),
        onOnlineState =
            lib.lookupFunction<_OnOnlineStateNative, _OnOnlineStateDart>(
                'toggl_on_online_state');

  final _ContextInitDart contextInit;
  final _ContextClearDart contextClear;
  final _SetDbPathDart setDbPath;
  final _SetLogPathDart setLogPath;
  final _UiStartDart uiStart;
  final _LoginDart login;
  final _LogoutDart logout;
  final _ContinueDart continueEntry;
  final _StopDart stop;
  final _OnTimeEntryListDart onTimeEntryList;
  final _OnTimerStateDart onTimerState;
  final _OnLoginDart onLogin;
  final _OnErrorDart onError;
  final _OnOnlineStateDart onOnlineState;
}
